--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', Arial, sans-serif;
-    background-image: url("images/table.png");
+    background-image: url("ressources/casino.jpg");
     background-size: cover;
     font-weight: bold;
     color: white;
@@ -9,14 +9,13 @@ body {
 
 h1 {
     color: goldenrod;
+    size: 30 px;
 }
 
 #message-el {
     font-style: italic;
 }
 
-/* 3. Make sure that the two buttons have some space between
-each other when they are rendered out vertically */
 button {
     color: #016f32;
     width: 150px;
